--- a/src/AdventOfCode2023/AdventOfCode2023.fsproj
+++ b/src/AdventOfCode2023/AdventOfCode2023.fsproj
@@ -20,5 +20,8 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+    <ItemGroup>
+        <Content Include="paket.references"/>
+    </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets"/>
 </Project>
