--- a/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
+++ b/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="Day6.Tests.fs"/>
         <Compile Include="Day7.Tests.fs"/>
         <Compile Include="Day8.Tests.fs"/>
+        <Compile Include="Day9.Tests.fs"/>
         <Content Include="paket.references"/>
     </ItemGroup>
     <ItemGroup>
