Day 10 part 1 solution

--- a/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
+++ b/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="Day7.Tests.fs"/>
         <Compile Include="Day8.Tests.fs"/>
         <Compile Include="Day9.Tests.fs"/>
+        <Compile Include="Day10.Tests.fs"/>
         <Content Include="paket.references"/>
     </ItemGroup>
     <ItemGroup>
