Day 11 part 1 solved

--- a/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
+++ b/src/AdventOfCode2023.Tests/AdventOfCode2023.Tests.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Day8.Tests.fs"/>
         <Compile Include="Day9.Tests.fs"/>
         <Compile Include="Day10.Tests.fs"/>
+        <Compile Include="Day11.Tests.fs"/>
         <Content Include="paket.references"/>
     </ItemGroup>
     <ItemGroup>
